# bittorrent-cpp

./: CMakeLists.txt  README.md
src/: main.cpp
src/bencode/: decode.cpp  decode.hpp  encode.cpp  encode.hpp
src/crypto/: sha1.cpp  sha1.hpp
src/lib/nlohmann/: json.hpp
src/peer/: handshake.cpp  handshake.hpp  peer_connection.cpp  peer_connection.hpp  piece_manager.cpp  piece_manager.hpp
src/torrent/: piece_hash.cpp  piece_hash.hpp  torrent_parser.cpp  torrent_parser.hpp
src/tracker/: peer_parser.cpp  peer_parser.hpp  tracker_client.cpp  tracker_client.hpp
src/utils/: file_reader.cpp  hex.cpp  hex.hpp  hex_utils.cpp  hex_utils.hpp  parse_magnet.cpp  parse_magnet.hpp  random.cpp  random.hpp  url_decode.cpp  url_decode.hpp  url_encode.cpp  url_encode.hpp  url_utils.cpp  url_utils.hpp
